--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Mi sitio web</title>
 </head>
 <body>
-    
+    <h1>Bienvenidos a mi sitio web</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam sed dolore culpa! Veniam explicabo voluptatem ex voluptate, placeat facilis totam nesciunt repellat quidem aut non quae aperiam hic, quisquam sed.
+    </p>
 </body>
 </html>
