--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
     <h1>Bienvenidos a mi sitio web</h1>
 
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+
 </body>
 </html>
