--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
+        <li>Item 4 (ana)</li>
     </ul>
 
     <script src="js/main.js"></script>
