--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>Item 3</li>
         <li>Item 4 (Daniel)</li>
         <li>Item 4 (ana)</li>
+        <li>Item 5</li>
     </ul>
 
     <script src="js/main.js"></script>
